--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
         </header>
         <!-- About Section-->
-        <section class="page-section bg-primary text-white mb-0" id="about">
+        <section class="page-section mb-0" id="about">
             <div class="container">
                 <!-- About Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-white">Challenge</h2>
