--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Hello World</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">ESL Coin Tron</a>
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -53,9 +53,17 @@
         </header>
         <!-- About Section-->
         <section class="page-section mb-0" id="about">
+            <h2 class="page-section-heading text-center text-uppercase text-secondary">ESL Coin TRX - English As A Second Language</h2>
+            ESL Coin TRX is a the Tron based fork implementation of ESL Coin, a community project that is set to disrupt the 84 Billion dollar language learning industry. Running in parallel with its ETH cousin where high gas fees are an issue, ESL Coin TRX will enjoy the benefits of low gas fees offered by the Tronix ecosystem making microtransactions possible.
+            <h2 class="page-section-heading text-center text-uppercase text-secondary">Background</h2>
+            English has been the effective lingua franca since the ascendance of the British Empire in the 19th century. It is still used as a common global language to this day, and proficiency is especially prized in countries competing to export to the massive combined economy of the United States, Canada, Australia, Great Britain and Ireland. This has created a global industry worth billions of dollars; in rich manufacturing centers such as South Korea, there are even celebrity ESL tutors making seven figures! Students from all over the world learn English from native English teachers—often traveling to dedicated schools overseas—forming a robust community with its own Meetups and conferences. Our team includes highly qualified ESL professionals with years of experience in the industry, and we are partnered with established ESL organizations. This includes one of the largest related Meetups and Facebook pages in the world, whose growing online community created the need for our upcoming blockchain-powered ESL app.
+            <img class="img-fluid" src="assets/img/ESL%20industry.png" alt="" /> 
+            <h2 class="page-section-heading text-center text-uppercase text-secondary">Challenge</h2>
+            While we take English for granted, there are billions who are eager to learn the English language but are prevented from doing so due to many existing barriers in the current English learning system from cost barriers to inefficient distribution systems and poor proficiency testing systems. The limitations in the current system has resulted in varying education levels across the board often only the wealthy could afford quality education and are often charged astronomical rates for language schools. The inefficiencies and lack of transparency in the education delivery & grading system has resulted in many exploits where profiteering schools & exam providers are known to ‘sell language proficiency levels’ to language learners based on their ability to pay and not their accomplishments in learning.
+            Globalization and the rise of technology have allowed many to have access to the internet. One of our goals is to make English learning accessible from anywhere in the world regardless of social economic background. We seek to create a blockchain system that removes inefficiencies and provide the benefits of blockchain to the language learning space. As long as you have a phone and internet connection, you can be connected to a global network of native speakers who can help you learn and become more fluent at communicating in English.
             <div class="container">
                 <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-white">Challenge</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary">How ESL Coin Will Change the ESL Industry</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
