--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#background">Background</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#roadmap">Roadmap</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Applications</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li>
@@ -57,37 +58,41 @@
             <div class="container">
                 <h2 class="page-section-heading text-center text-uppercase text-secondary">ESL Coin TRX - English As A Second Language</h2>
                 <p>ESL Coin TRX is a the Tron based fork implementation of ESL Coin, a community project that is set to disrupt the 84 Billion dollar language learning industry. Running in parallel with its ETH cousin where high gas fees are an issue, ESL Coin TRX will enjoy the benefits of low gas fees offered by the Tronix ecosystem making microtransactions possible.</p>
-                <h2 class="page-section-heading text-center text-uppercase text-secondary">Background</h2>
+                <h3 class="page-section-heading text-center text-uppercase text-secondary">Background</h2>
                 <p>English has been the effective lingua franca since the ascendance of the British Empire in the 19th century. It is still used as a common global language to this day, and proficiency is especially prized in countries competing to export to the massive combined economy of the United States, Canada, Australia, Great Britain and Ireland. This has created a global industry worth billions of dollars; in rich manufacturing centers such as South Korea, there are even celebrity ESL tutors making seven figures! Students from all over the world learn English from native English teachers—often traveling to dedicated schools overseas—forming a robust community with its own Meetups and conferences. Our team includes highly qualified ESL professionals with years of experience in the industry, and we are partnered with established ESL organizations. This includes one of the largest related Meetups and Facebook pages in the world, whose growing online community created the need for our upcoming blockchain-powered ESL app.</p>
                 <p><img class="img-fluid" src="assets/img/ESL%20industry.png" alt="" /> </p>
-                <h2 class="page-section-heading text-center text-uppercase text-secondary">Challenge</h2>
+                <h3 class="page-section-heading text-center text-uppercase text-secondary">Challenge</h2>
                 <p>While we take English for granted, there are billions who are eager to learn the English language but are prevented from doing so due to many existing barriers in the current English learning system from cost barriers to inefficient distribution systems and poor proficiency testing systems. The limitations in the current system has resulted in varying education levels across the board often only the wealthy could afford quality education and are often charged astronomical rates for language schools. The inefficiencies and lack of transparency in the education delivery & grading system has resulted in many exploits where profiteering schools & exam providers are known to ‘sell language proficiency levels’ to language learners based on their ability to pay and not their accomplishments in learning.</p>
                 <p>Globalization and the rise of technology have allowed many to have access to the internet. One of our goals is to make English learning accessible from anywhere in the world regardless of social economic background. We seek to create a blockchain system that removes inefficiencies and provide the benefits of blockchain to the language learning space. As long as you have a phone and internet connection, you can be connected to a global network of native speakers who can help you learn and become more fluent at communicating in English.</p>
             </div>
+        </section>
+        <!-- Roadmap Section-->
+        <section class="page-section bg-primary text-white mb-0" id="roadmap">
             <div class="container">
-                <!-- About Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary">How ESL Coin Will Change the ESL Industry</h2>
+                <!-- Roadmap Section Heading-->
+                <h2 class="page-section-heading text-center text-uppercase text-white">Project Roadmap</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>
-                <!-- About Section Content-->
+                <!-- Roadmap Section Content-->
                 <div class="row">
-                    <div class="col-lg-4 ml-auto"><p class="lead">ESL space is full of flaws. Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
-                    <div class="col-lg-4 mr-auto"><p class="lead">High costs and lots of ppl left out. You can create your own custom avatar for the masthead, change the icon in the dividers, and add your email address to the contact form to make it fully functional!</p></div>
-                    <div class="col-lg-4 ml-auto"><p class="lead">Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional SASS stylesheets for easy customization.</p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Technical Launch</h3></p><p class="lead">ESL Coin TRX will launch to the technical community through a daily auction. Token holders can acquire tokens through the auction and can stake ESL Coin TRX with the contract for daily dividends.</p></div>
+                    <div class="col-lg-4 mr-auto"><p><h3>Ecosystem Development</h3></p><p class="lead">The development team will use the proceeds of the daily auction to support an ecosystem of dApps on the ESL Coin TRX network. </p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Public Launch</h3></p><p class="lead">ESL Coin TRX will be released to the public for purchase at this stage through public exchanges and an internal exchange on the ESL Coin website. </p></div>
                 </div>
-                <!-- About Section Button-->
+                <!-- Roadmap Section Button-->
                 <div class="text-center mt-4">
-                    <a class="btn btn-xl btn-outline-light" href="https://startbootstrap.com/theme/freelancer/">
+                    <a class="btn btn-xl btn-outline-light" href="assets/whitepaper.pdf">
                         <i class="fas fa-download mr-2"></i>
-                        Get Started with Auction!
+                        See White Paper!
                     </a>
                 </div>
             </div>
         </section>
+        
         <!-- Portfolio Section-->
         <section class="page-section portfolio" id="portfolio">
             <div class="container">
