--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
         <!-- Background Section-->
         <section class="page-section mb-0" id="background">
             <div class="container">
-                <h2 class="page-section-heading text-center text-uppercase text-secondary">ESL Coin TRX - English As A Second Language</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary">English As A Second Language Coin</h2>
+                <div class="divider-custom">
+                    <div class="divider-custom-line"></div>
+                    <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
+                    <div class="divider-custom-line"></div>
+                </div>
                 <p>ESL Coin TRX is a the Tron based fork implementation of ESL Coin, a community project that is set to disrupt the 84 Billion dollar language learning industry. Running in parallel with its ETH cousin where high gas fees are an issue, ESL Coin TRX will enjoy the benefits of low gas fees offered by the Tronix ecosystem making microtransactions possible.</p>
                 <h3 class="page-section-heading text-center text-uppercase text-secondary">Background</h2>
                 <p>English has been the effective lingua franca since the ascendance of the British Empire in the 19th century. It is still used as a common global language to this day, and proficiency is especially prized in countries competing to export to the massive combined economy of the United States, Canada, Australia, Great Britain and Ireland. This has created a global industry worth billions of dollars; in rich manufacturing centers such as South Korea, there are even celebrity ESL tutors making seven figures! Students from all over the world learn English from native English teachers—often traveling to dedicated schools overseas—forming a robust community with its own Meetups and conferences. Our team includes highly qualified ESL professionals with years of experience in the industry, and we are partnered with established ESL organizations. This includes one of the largest related Meetups and Facebook pages in the world, whose growing online community created the need for our upcoming blockchain-powered ESL app.</p>
@@ -193,51 +198,18 @@
         <section class="page-section" id="contact">
             <div class="container">
                 <!-- Contact Section Heading-->
-                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Contact Me</h2>
+                <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Get Involved</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
                     <div class="divider-custom-line"></div>
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
-                </div>
-                <!-- Contact Section Form-->
+                </div>               
+                <!-- Roadmap Section Content-->
                 <div class="row">
-                    <div class="col-lg-8 mx-auto">
-                        <!-- To configure the contact form email address, go to mail/contact_me.php and update the email address in the PHP file on line 19.-->
-                        <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Name</label>
-                                    <input class="form-control" id="name" type="text" placeholder="Name" required="required" data-validation-required-message="Please enter your name." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Email Address</label>
-                                    <input class="form-control" id="email" type="email" placeholder="Email Address" required="required" data-validation-required-message="Please enter your email address." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Phone Number</label>
-                                    <input class="form-control" id="phone" type="tel" placeholder="Phone Number" required="required" data-validation-required-message="Please enter your phone number." />
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <div class="control-group">
-                                <div class="form-group floating-label-form-group controls mb-0 pb-2">
-                                    <label>Message</label>
-                                    <textarea class="form-control" id="message" rows="5" placeholder="Message" required="required" data-validation-required-message="Please enter a message."></textarea>
-                                    <p class="help-block text-danger"></p>
-                                </div>
-                            </div>
-                            <br />
-                            <div id="success"></div>
-                            <div class="form-group"><button class="btn btn-primary btn-xl" id="sendMessageButton" type="submit">Send</button></div>
-                        </form>
-                    </div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Spread the Word</h3></p><p class="lead">Tell your friends and others about ESL Coin TRX! Let's build up a community of crypto enthusiasts who would like to school the unschooled population.</p></div>
+                    <div class="col-lg-4 mr-auto"><p><h3>Build dApps on the Ecosystem</h3></p><p class="lead">Are you a developer? We invite you to build dApps for the ESLCoin TRX that are focused on disrupting the language learning ecosystem. </p></div>
+                    <div class="col-lg-4 ml-auto"><p><h3>Participate</h3></p><p class="lead">Be part of history in the making by getting your hands on some ESL Coin TRX. Stake them and test out the apps for bounties and rewareds.  </p></div>
                 </div>
             </div>
         </section>
