--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>ESL Coin Tron</title>
+        <title>ESL Coin Tron | ESL Coin TRX | ESL Coin</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">ESL Coin Tron</a>
+                <a class="navbar-brand js-scroll-trigger" href="#page-top">ESL Coin TRX</a>
                 <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars"></i>
@@ -31,7 +31,7 @@
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#roadmap">Roadmap</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Applications</a></li>
                         <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a></li>
-                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#contact">Contact</a></li>
+                        <li class="nav-item mx-0 mx-lg-1"><a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#involve">Get Involved</a></li>
                     </ul>
                 </div>
             </div>
@@ -63,10 +63,10 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <p>ESL Coin TRX is a the Tron based fork implementation of ESL Coin, a community project that is set to disrupt the 84 Billion dollar language learning industry. Running in parallel with its ETH cousin where high gas fees are an issue, ESL Coin TRX will enjoy the benefits of low gas fees offered by the Tronix ecosystem making microtransactions possible.</p>
-                <h3 class="page-section-heading text-center text-uppercase text-secondary">Background</h2>
+                <h3 class="page-section-heading text-center text-uppercase text-secondary">Background</h3>
                 <p>English has been the effective lingua franca since the ascendance of the British Empire in the 19th century. It is still used as a common global language to this day, and proficiency is especially prized in countries competing to export to the massive combined economy of the United States, Canada, Australia, Great Britain and Ireland. This has created a global industry worth billions of dollars; in rich manufacturing centers such as South Korea, there are even celebrity ESL tutors making seven figures! Students from all over the world learn English from native English teachers—often traveling to dedicated schools overseas—forming a robust community with its own Meetups and conferences. Our team includes highly qualified ESL professionals with years of experience in the industry, and we are partnered with established ESL organizations. This includes one of the largest related Meetups and Facebook pages in the world, whose growing online community created the need for our upcoming blockchain-powered ESL app.</p>
                 <p><img class="img-fluid" src="assets/img/ESL%20industry.png" alt="" /> </p>
-                <h3 class="page-section-heading text-center text-uppercase text-secondary">Challenge</h2>
+                <h3 class="page-section-heading text-center text-uppercase text-secondary">Challenge</h3>
                 <p>While we take English for granted, there are billions who are eager to learn the English language but are prevented from doing so due to many existing barriers in the current English learning system from cost barriers to inefficient distribution systems and poor proficiency testing systems. The limitations in the current system has resulted in varying education levels across the board often only the wealthy could afford quality education and are often charged astronomical rates for language schools. The inefficiencies and lack of transparency in the education delivery & grading system has resulted in many exploits where profiteering schools & exam providers are known to ‘sell language proficiency levels’ to language learners based on their ability to pay and not their accomplishments in learning.</p>
                 <p>Globalization and the rise of technology have allowed many to have access to the internet. One of our goals is to make English learning accessible from anywhere in the world regardless of social economic background. We seek to create a blockchain system that removes inefficiencies and provide the benefits of blockchain to the language learning space. As long as you have a phone and internet connection, you can be connected to a global network of native speakers who can help you learn and become more fluent at communicating in English.</p>
             </div>
@@ -194,10 +194,10 @@
                 </div>
             </div>
         </section>
-        <!-- Contact Section-->
-        <section class="page-section" id="contact">
+        <!-- Get Involved Section-->
+        <section class="page-section" id="involve">
             <div class="container">
-                <!-- Contact Section Heading-->
+                <!-- Get Involved Section Heading-->
                 <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Get Involved</h2>
                 <!-- Icon Divider-->
                 <div class="divider-custom">
@@ -205,7 +205,7 @@
                     <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                     <div class="divider-custom-line"></div>
                 </div>               
-                <!-- Roadmap Section Content-->
+                <!-- Involve Section Content-->
                 <div class="row">
                     <div class="col-lg-4 ml-auto"><p><h3>Spread the Word</h3></p><p class="lead">Tell your friends and others about ESL Coin TRX! Let's build up a community of crypto enthusiasts who would like to school the unschooled population.</p></div>
                     <div class="col-lg-4 mr-auto"><p><h3>Build dApps on the Ecosystem</h3></p><p class="lead">Are you a developer? We invite you to build dApps for the ESLCoin TRX that are focused on disrupting the language learning ecosystem. </p></div>
@@ -225,9 +225,9 @@
                     </div>
                     <!-- Footer About Text-->
                     <div class="col-lg-4">
-                        <h4 class="text-uppercase mb-4">About ESL Coin Tron</h4>
+                        <h4 class="text-uppercase mb-4">About ESL Coin TRX</h4>
                         <p class="lead mb-0">
-                            About ESL Coin Tron is the Tron Based implementation of the <a href="http://eslcoin.org">ESL Coin project</A>. 
+                            About ESL Coin TRX is the Tron Based implementation of the <a href="http://eslcoin.org">ESL Coin project</A>. 
                         </p>
                     </div>
                 </div>
@@ -235,7 +235,7 @@
         </footer>
         <!-- Copyright Section-->
         <div class="copyright py-4 text-center text-white">
-            <div class="container"><small>Copyright © EslCoin Tron 2021</small></div>
+            <div class="container"><small>Copyright © ESL Coin TRX 2021</small></div>
         </div>
         <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes)-->
         <div class="scroll-to-top d-lg-none position-fixed">
